--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "export": "rm -rf dist && mkdir dist &&  babel src/component -d dist --copy-files"
+
   },
   "eslintConfig": {
     "extends": "react-app"
